# disaster_bot

./: README.md
disaster_bot/: package.xml  setup.cfg  setup.py
disaster_bot/config/: nav2.yaml
disaster_bot/disaster_bot/: auto_mapping_explorer.py  firex_person.py  firex_person_webcam.py  ttb4_compare2frame.py  ttb4_orb.py
disaster_bot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
disaster_bot/install/disaster_bot/lib/disaster_bot/: dibot
disaster_bot/install/disaster_bot/share/disaster_bot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
disaster_bot/launch/: auto_mapping_launch.py
disaster_bot/log/: latest_build
tf_tree/: frames_2024-12-31_17.02.36.gv
yaml/: slam.yaml
